# cpp-playground-functors

./: CMakeLists.txt  Makefile  README.md  functors.h  mock_particle.h  test_functors.cc
func/: add.h  chain.h  compiletime.h  func.h  identity.h  invoke.h  is_callable.h  lift.h  map.h  mult.h  pack.h  reduce.h  wrap.h
tests/: mock_particle.h  test_compiletime.cc  test_func.cc
